--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="max-w-screen-xl mx-auto px-4 py-3 flex items-center justify-between">
     <div class="flex items-center space-x-2">
       <i class="fa-solid fa-chart-line text-yellow-400 text-2xl"></i>
-      <span class="text-xl font-semibold tracking-wide">Mi Panel</span>
+      <span class="text-xl font-semibold tracking-wide">Pharma Stock</span>
     </div>
 
     <button
